Fix map overlap bug

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
+    <section id="map-container" aria-label="map">
       <div id="map""></div>
     </section>
-    <section>
+    <section aria-label="filtering">
       <div class="filter-options">
         <h2>Filter Results</h2>
         <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" tabindex="2" aria-label="neighborhoods">
