--- a/restaurant.html
+++ b/restaurant.html
@@ -48,7 +48,7 @@
           <table id="restaurant-hours"></table>
         </div>
       </section>
-    </section>>
+    </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
     <section id="reviews-container">
